bundled_metadata/force-app/main/default/objects/AssessmentIndicatorDefinition/AssessmentIndicatorDefinition.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>