bundled_metadata/force-app/main/default/objects/AssessmentIndicatorDefinition/fields/Answer_Type__c.field-meta.xml
<CustomField>
    <fullName>Answer_Type__c</fullName>
    <description>Specifies how respondents provide an answer for this survey question (e.g., checklist, multi-select checklist, numeric, rating, free text, binary, or conditional follow-up).</description>
    <inlineHelpText>Select the expected answer format: Checklist, Multi-Checklist, Numeric, Rating, Free Text, Binary (Yes/No), or Conditional (follow-up shown based on parent answer).</inlineHelpText>
    <label>Answer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Binary</fullName>
            </value>
            <value>
                <fullName>Free Text</fullName>
            </value>
            <value>
                <fullName>Numeric</fullName>
            </value>
            <value>
                <fullName>Rating</fullName>
            </value>
            <value>
                <fullName>Checklist</fullName>
            </value>
            <value>
                <fullName>Multi-Checklist</fullName>
            </value>
            <value>
                <fullName>Conditional</fullName>
                <isActive>false</isActive>
                <label>Conditional</label>
            </value>
            <value>
                <fullName>Date</fullName>
                <isActive>false</isActive>
                <label>Date</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>