bundled_metadata/force-app/main/default/objects/AssessmentIndicatorDefinition/fields/KPI_ID__c.field-meta.xml
<CustomField>
    <fullName>KPI_ID__c</fullName>
    <description>KPI ID for the operational task question</description>
    <label>KPI ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>