bundled_metadata/force-app/main/default/objects/AssessmentIndicatorDefinition/fields/Rating_Max__c.field-meta.xml
<CustomField>
    <fullName>Rating_Max__c</fullName>
    <description>Highest rating value allowed when Answer Type is Rating</description>
    <label>Rating Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>