bundled_metadata/force-app/main/default/objects/AssessmentIndicatorDefinition/fields/Rating_Min__c.field-meta.xml
<CustomField>
    <fullName>Rating_Min__c</fullName>
    <description>Lowest rating value allowed when Answer Type is Rating</description>
    <label>Rating Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>