bundled_metadata/force-app/main/default/objects/AssessmentIndicatorDefinition/fields/Rating_Scale__c.field-meta.xml
<CustomField>
    <fullName>Rating_Scale__c</fullName>
    <description>Granularity or scale size for Rating questions</description>
    <label>Rating Scale</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>