bundled_metadata/force-app/main/default/objects/AssessmentIndicatorDefinition/fields/Show_Next_Question_When_Answer_Is__c.field-meta.xml
<CustomField>
    <fullName>Show_Next_Question_When_Answer_Is__c</fullName>
    <description>When this question is used in a survey, show the linked follow-up question only when the answer here is Yes or No. Used with Follow-up Question on the survey (Assessment Task Ind Definition).</description>
    <inlineHelpText>Yes = show next question when answer is Yes. No = show next question when answer is No.</inlineHelpText>
    <label>Show Next Question When Answer Is</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>